feat!: entity collection endpoints
