# swagger.json
@@ -126,6 +126,53 @@
                 }
             }
         },
+        "/api/entity/collections": {
+            "get": {
+                "description": "",
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/entity/collectionById/:id": {
+            "get": {
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/entity/collectionsByOwnerDid/:did": {
+            "get": {
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "did",
+                        "in": "path",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/api/bonds/listBonds": {
             "get": {
                 "description": "",
